--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -32,9 +32,11 @@ body {
 	display: none;
 }
 
-#form-container{
+#form-container, #time-line{
 	width: 600px;
 	margin:auto;
+}
+#form-container {
 	min-height:70%;
 }
 
@@ -45,10 +47,8 @@ body {
 		display: block;
 	}
 				  
-	#form-container{
+	#form-container, #time-line{
 		width: 90%;
-		margin:auto;
-		min-height:70%;
 	}
 
 }
@@ -66,11 +66,5 @@ body {
 		text-align: left;
 	}
 	
-	#form-container{
-		width: 90%;
-		margin:auto;
-		min-height:70%;
-	}
-
 }
 				
